# ZSH-ollama-terminal

./: .gitignore  Cargo.toml  README.md  cargo.toml  some_tips.md
.cargo/: config.toml
crates/ai-core/: Cargo.toml  cargo.toml
crates/ai-core/src/: cache.rs  hallucination_detector.rs  integration.rs  lib.rs  training_engine.rs
crates/check-milestones/: Cargo.toml  base_checkout.md  cargo.toml  justfile  progress_report.md  readme.md
crates/check-milestones/src/: lib.rs  main.rs  milestone_gates.rs  progress_tracker.rs  quality_gates.rs
crates/config/: cargo.toml
crates/file-ops/: Cargo.toml
crates/file-ops/src/: lib.rs
crates/ollama-client/: cargo.toml
crates/ollama-client/src/: lib.rs
crates/security/: Cargo.toml  cargo.toml
crates/security/src/: lib.rs
crates/shared/: Cargo.toml
crates/shared/docs/: arch-classes-2.mmd  arch_classes.mmd  arch_dataflow.mmd  data-types-classes.mmd  data_flow.mmd  error-hierarhy.mmd  state-lifecircle.mmd  traits-classes.mmd  traits-relationship.mmd  usage-example.mmd
crates/shared/src/: error.rs  lib.rs  serialization.rs  states.rs  traits.rs
crates/shared/src/alice_ai/: prmt_error.md
crates/terminal-integration/: cargo.toml
crates/training-engine/: Cargo.toml
crates/web-ui/: cargo.toml
crates/web-ui/src/: http_types.rs
crates/web-ui/templates/: base.html
crates/web-ui/templates/components/: command_input.html
scripts/: verify-phase1.sh
