[workspace]
resolver = "2"
members = [
  "apps/cli",
  "apps/daemon",
  "crates/ai-core",
  "crates/check-milestones",
  "crates/config",
  "crates/file-ops",
  "crates/ollama-client",
  "crates/platform",
  "crates/security",
  "crates/shared",
  "crates/terminal-integration",
  "crates/training-engine",
  "crates/web-ui"
]

[workspace.package]
version = "0.1.0"
# authors = [ "ZSH Ollama Terminal Team <team@example.com>"]
edition = "2021"
description = "Terminal and IDE application with Ollama integration"
readme = "README.md"
repository = "https://github.com/yourusername/zsh-ollama-terminal"
license = "MIT OR Apache-2.0"
keywords = ["ai", "cli", "ollama", "terminal", "zsh"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
# external
async-trait = "0.1"
# internal
check-milestones = { path = "crates/check-milestones" }
chrono = { version = "0.4", features = ["serde"] }
# Фаза 1: Core Types Dependencies
libc = "0.2"
regex = "1.0"
# Фаза 2: Infrastructure Dependencies
reqwest = "0.12"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
uuid = { version = "1.3", features = ["serde", "v4"] }
whoami = "1.0"

# Фаза 2: Infrastructure Dependencies (будет добавлено позже)
# axum = "0.7"
# tera = "1.0"
# reqwest = "0.11"

# Фаза 3: AI Core Dependencies (будет добавлено позже)
# ollama-rs = "0.1"

# Фаза 4: Web Dependencies (будет добавлено позже)
# tower-http = { version = "0.5", features = ["compression-full", "cors"] }

# Флаг для контроля зависимостей
# [features]
# default = ["phase1-complete"]
# phase1-complete = []      # Фаза 1 завершена
# phase2-ready = []         # Готов к фазе 2
# phase3-ready = []         # Готов к фазе 3
