[package]
name = "ai-core"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
security = { path = "../security" }
ollama-client = { path = "../ollama-client" }
file-ops = { path = "../file-ops" }
# внутренние
async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
dirs = "5.0"
serde = { workspace = true, features = ["derive"] }
once_cell = "1.19"
lru = "0.16"
regex = {workspace = true }
serde_json = "1.0"
tokio = { workspace = true, features = ["full", "sync"] }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "macros"] }
