[package]
name = "check-milestones"
version = "0.1.0"
edition = "2021"
description = "Quality Gates and milestone tracking system for zsh-ollama-terminal"
# repository = "https://github.com/your-username/zsh-ollama-terminal"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["ci", "milestone", "quality-gates", "testing"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "check_milestones"
path = "src/lib.rs"

[[bin]]
name = "check-milestones"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"], optional = true }
colored = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = "2.0"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.0"

[features]
# default = ["serde", "chrono"]
cli = ["clap"]  # Для бинарного CLI инструмента
