
# crates/shared/Cargo.toml:**
[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
chrono = { workspace = true, features = ["serde"] }
nix = { version = "0.29", features = ["user"] }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
sys-info = "0.9"
thiserror = { workspace = true }
tokio = { workspace = true, optional = true}
libc ={workspace = true}
uuid = { workspace = true, features = ["v4", "serde"] }
whoami = {workspace = true}

[dev-dependencies]
tokio = { workspace = true, features = ["full", "macros"] }

[features]
default = []
test-utils = ["tokio"]
